# AirportSimulator

A2Simulator/: AirportSimulator.cpp  AirportSimulator.h  CMakeLists.txt  Delay.cpp  Delay.h  Plane.cpp  Plane.h  PlaneGenerator.cpp  PlaneGenerator.h  Queue.cpp  Queue.h  Rand.cpp  Rand.h  Runway.cpp  Runway.h  Timer.cpp  Timer.h  main.cpp
